# prompt-study-notifier

./: .gitignore  AGENTS.md  CODEX_ONBOARDING.md  README.md  pyproject.toml
prompt_study_notifier/: app.py  db.py  generation.py  live_updates.py  main.py  openai_client.py  prompt_cache_metrics.py  rendering.py  scheduler.py  schemas.py  settings.py  telegram_client.py  ui.py
prompt_study_notifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: install_spotlight_launcher.sh  launch_prompt_study_notifier.sh
src/prompt_study_notifier/: __init__.py  app.py  db.py  generation.py  main.py  openai_client.py  rendering.py  scheduler.py  schemas.py  telegram_client.py  ui.py
src/prompt_study_notifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_api.py  test_generation.py  test_prompt_cache_metrics.py  test_rendering.py  test_scheduler.py  test_settings.py
