[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-study-notifier"
version = "0.1.0"
description = "Local prompt-driven study notifier with FastAPI, SQLite, scheduling, and live browser updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[project.scripts]
prompt-study-notifier = "prompt_study_notifier.main:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_study_notifier*"]
